tests, file improvements, download and dir helpers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,9 @@ addopts = "-v"
 [tool.flake8]
 max-line-length = 100
 exclude = [".git", "__pycache__", "build", "dist"]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+]
